# drip

./: Cargo.toml  README.md
scripts/: docker-run-amd64.sh
src/: ast.rs  index.rs  intern.rs  lexer.rs  main.rs  parser.rs
src/backend/: early_optimizations.rs  hir_lowering.rs  layout.rs  lir.rs  mod.rs  pretty_print.rs  target.rs
src/backend/assemblers/: x86_64.rs
src/backend/targets/: x86_64_linux_gnu.rs
src/frontend/: ast.rs  intern.rs  lexer.rs  mod.rs  parser.rs  resolve.rs
src/frontend/ast/: mod.rs  visit.rs
src/middle/: hir.rs  mod.rs  primitive.rs  resolve.rs  ty.rs  type_check.rs  type_checker.old.rs  type_checker.rs
src/middle/ast_lowering/: index.rs  mod.rs
src/middle/hir/: ast_lowering.rs  id.rs  mod.rs  visit.rs
src/middle/lir/: hir_lowering.rs  mod.rs  pretty_print.rs
src/middle/optimization/: mod.rs  pre_ssa.rs
src/middle/optimization/ssa/: mod.rs
src/middle/type_checking/: mod.rs  ty.rs
tests/: 01-hello-world.drip  02-add.drip  03-locals.drip  04-loops.drip  04-math.drip  05-pointers.drip  06-asm.drop  07-structs.drip  08-unions.drip  09-include.drip  10-rule-110.drip  11-fizz-buzz.drip  12-fibonacci.drip  13-fibonacci-recursive.drip  14-tuples.drip  15-fields.drip  core.drip
