[package]
name = "dripc"
version = "0.1.0"
edition = "2021"
description = "Drip Language Bootstrap Compiler"
authors = ["Adrian Wowk <dev@adrianwowk.com>"]
license = "MIT"
repository = "https://github.com/RiptideOS/drip"
readme = "README.md"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
itertools = "0.13.0"
once_cell = "1.19.0"
strum = { version = "0.26.3", features = ["derive"] }
